# greedcode

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md
src/: main.rs  output.rs
src/api/: mod.rs  openrouter.rs  shirman.rs
src/models/: types.rs
