[package]
name = "greedcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "greedcode"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"
dotenv = "0.15.0"
